# fastapi_test

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 8256c8b6bd04_init_tables.py
app/: __init__.py  config.py  config.yaml  deps.py
app/api/: __init__.py  hello.py  product.py
app/crud/: model.py
app/lib/: init_db.py  logging.py
app/models/: __init__.py  database.py  model.py
docker/: Dockerfile  base.Dockerfile
matrix_db/: matrix.db
tests/: conftest.py
tests/api/: test_hello.py
