[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = ["Tui Xiang <tx@infervision.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
fastapi = "^0.61.2"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.12.0"}
alembic = "^1.6.5"
sqlalchemy = "^1.4.22"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pre-commit = "^2.8.2"
python-dotenv = "^0.15.0"
flake8 = "^3.8.4"
mypy = "^0.790"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.poetry.source]]
name = "tx"
url = "https://repos.infervision.com/repository/pypi-local"
secondary = true

[[tool.poetry.source]]
name = "tx"
url = "https://repos.infervision.com/repository/pypi-local"
secondary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = "0"
include_trailing_comma = true
line_length = "119"
lines_after_imports = "2"
multi_line_output = "3"
use_parentheses = true
force_to_top = "setuppath"

[tool.black]
line-length = 119
target-version = ['py37']
[tool.pytest.ini_options]
norecursedirs = ["tests/samples"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

